--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-pic.jpg" class="img-fluid" alt="">
+            <img src="assets/img/bishal.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
