--- a/service-details.html
+++ b/service-details.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - Personal Bootstrap Template</title>
+  <title>Service Details - Bishal</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  
+
  <!-- Favicons -->
  <link href="assets/img/favicon-16x16.png" rel="icon">
  <link href="assets/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon">
