--- a/about.html
+++ b/about.html
@@ -415,13 +415,13 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
     </section><!-- /Interests Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section">
+    <!-- <section id="testimonials" class="testimonials section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      
+       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
         <div><span>Check my</span> <span class="description-title">Testimonials</span></div>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -464,7 +464,7 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
                 <h3>Amit Sharma</h3>
                 <h4>CSmall Business Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -477,7 +477,7 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
                 <h3>Priya Mehta</h3>
                 <h4>UI/UX Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -490,7 +490,7 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
                 <h3>Rahul Verma</h3>
                 <h4>Senior Developer & Mentor</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -503,7 +503,7 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
                 <h3>Neha Kapoor</h3>
                 <h4>Startup Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -516,15 +516,15 @@ When I’m not coding or designing, you’ll find me exploring the latest trends
                 <h3>Rohan Gupta</h3>
                 <h4>Full-Stack Developer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
+      </div> -->
 
-    </section><!-- /Testimonials Section -->
+    </section> 
 
   </main>
 
