--- a/services.html
+++ b/services.html
@@ -139,8 +139,8 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>NEWSLETTER</h3>
+              <a href="./services/newsletter-development.html" class="stretched-link">
+                <h3>NEWSLETTER DESIGN AND DEVELOPMENT</h3>
               </a>
               <!-- <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p> -->
             </div>
