--- a/services/newsletter-development.html
+++ b/services/newsletter-development.html
@@ -113,8 +113,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <a href="./web-development.html" >WEB DEVELOPMENT</a>
-              <a href="./webapp-development.html" class="active">WEB APP DEVELOPMENT</a>
-              <a href="./newsletter-development.html">NEWSLETTER DESIGN AND DEVELOPMENT</a>
+              <a href="./webapp-development.html" >WEB APP DEVELOPMENT</a>
+              <a href="./newsletter-development.html" class="active">NEWSLETTER DESIGN AND DEVELOPMENT</a>
               <a href="#">WORDPRESS DEVELOPMENT</a>
               <a href="#">WEBSITE DESIGN</a>
             </div>
@@ -122,23 +122,23 @@
           </div>
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="../assets/img/service-img/WebApp-development.webp" alt="" class="img-fluid services-img">
-            <h3>Professional Web App Development Service </h3>
-            <h4>Build Scalable, Secure, and High-Performance Web Applications </h4>
-            <p>
-              In today’s digital world, a powerful web application can transform your business by improving efficiency, enhancing user engagement, and driving growth. I specialize in crafting custom web applications tailored to your unique needs—whether you need a SaaS platform, enterprise solution, e-commerce system, or a dynamic business tool.
-            </p>
-            <h4>My Web App Development Services: </h4>
+            <img src="../assets/img/service-img/newsletter.webp" alt="" class="img-fluid services-img">
+            <h3>Professional Newsletter Design & Development for Mailchimp </h3>
+            <p>Boost your email marketing with stunning, high-converting newsletters designed and developed for Mailchimp. Whether you're looking to engage subscribers, promote products, or grow your brand, I create visually appealing and responsive newsletters that drive results. </p>
+            
+            <h4>Why Choose My Newsletter Design & Development Services? </h4>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span><strong>Frontend Development (UI/UX Focused):</strong> Responsive & interactive interfaces using React.js</span></li>
-              <li><i class="bi bi-check-circle"></i> <span> <strong>Backend Development (Robust & Secure):</strong> Node.js, PHP </span></li>
-              <li><i class="bi bi-check-circle"></i> <span><strong>Database design & development:</strong> MongoDB, MySQL</span></li>
+                <li>✅ Custom & Brand-Consistent Designs – Tailored to match your brand identity for a cohesive look.</li>
+                <li>✅ Mobile-Friendly & Responsive – Ensures perfect display on all devices (desktop, tablet, mobile).</li>
+                <li>✅ Mailchimp Expertise – Optimized for Mailchimp’s platform with clean, functional code.</li>
             </ul>
-            <h4>Why Choose Me? </h4>
+
+            <h4>Who Can Benefit? </h4>
             <ul>
-                <li>✔ Tailored Solutions – No one-size-fits-all; your app is built for your goals.</li>
-                <li>✔ Modern Tech Stack – Latest frameworks & libraries for speed and scalability.</li>
-                <li>✔ Security-First Approach – Protection against vulnerabilities & data breaches.</li>
+                <li>✔ E-commerce Stores (Product Promotions, Sales)</li>
+                <li>✔ Bloggers & Content Creators</li>
+                <li>✔ Agencies & Marketing Teams</li>
+                <li>✔ Small Businesses & Startups</li>
             </ul>
             <p>
               Contact me today to discuss your project and get a free consultation.
