--- a/services/web-development.html
+++ b/services/web-development.html
@@ -114,7 +114,7 @@
             <div class="services-list">
               <a href="./services/web-development.html" class="active">WEB DEVELOPMENT</a>
               <a href="./webapp-development.html">WEB APP DEVELOPMENT</a>
-              <a href="#">NEWSLETTER DESIGN AND DEVELOPMENT</a>
+              <a href="./newsletter-development.html">NEWSLETTER DESIGN AND DEVELOPMENT</a>
               <a href="#">WORDPRESS DEVELOPMENT</a>
               <a href="#">WEBSITE DESIGN</a>
             </div>
