--- a/services.html
+++ b/services.html
@@ -151,11 +151,11 @@
               <div class="icon">
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="./services/wordpress-development.html" class="stretched-link">
                 <h3>WORDPRESS DEVELOPMENT</h3>
               </a>
               <!-- <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p> -->
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="./services/wordpress-development.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -164,11 +164,11 @@
               <div class="icon">
                 <i class="bi bi-calendar4-week"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="./services/website-design.html" class="stretched-link">
                 <h3>WEBSITE DESIGN</h3>
               </a>
               <!-- <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p> -->
-              <a href="service-details.html" class="stretched-link"></a>
+              <a href="./services/website-design.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
