--- a/services/web-development.html
+++ b/services/web-development.html
@@ -115,8 +115,8 @@
               <a href="./services/web-development.html" class="active">WEB DEVELOPMENT</a>
               <a href="./webapp-development.html">WEB APP DEVELOPMENT</a>
               <a href="./newsletter-development.html">NEWSLETTER DESIGN AND DEVELOPMENT</a>
-              <a href="#">WORDPRESS DEVELOPMENT</a>
-              <a href="#">WEBSITE DESIGN</a>
+              <a href="./wordpress-development.html">WORDPRESS DEVELOPMENT</a>
+              <a href="./website-design.html">WEBSITE DESIGN</a>
             </div>
             
           </div>
