--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Portfolio</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p class="mb-0">Welcome to my portfolio — a curated collection of my work in website development, web app development, and WordPress solutions. With a strong foundation in both design and development, I specialize in crafting digital experiences that are not only visually appealing but also fast, functional, and user-friendly.</p>
             </div>
           </div>
         </div>
