--- a/portfolio.html
+++ b/portfolio.html
@@ -144,6 +144,20 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/shoe-display-website/shoe-display-website.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website</h4>
+                  <p>Shoe display website</p>
+                  <a href="./assets/img/portfolio/shoe-display-website/shoe-display-website.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/shoe-display-website.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+            
+
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
