--- a/portfolio.html
+++ b/portfolio.html
@@ -155,6 +155,18 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/shopers-delight-website/shopers-delight-screen1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website</h4>
+                  <p>SHOPERS DELIGHT: A Ecommerce website</p>
+                  <a href="./assets/img/portfolio/shopers-delight-website/shopers-delight-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/shopers-delight.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
             
 
 
