--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-website">Websites</li>
             <li data-filter=".filter-webapp">WebApps</li>
-            <li data-filter=".filter-branding">Branding</li>
+            <li data-filter=".filter-web-designs">Web Designs</li>
             <li data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
@@ -122,7 +122,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/melvin-website/melvin-website.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/melvin-website/melvin-website-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website</h4>
                   <p>Melvin: A company's portfolio</p>
@@ -134,7 +134,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/neon-website/neon-screen-1.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/neon-website/neon-screen-1-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website</h4>
                   <p>Neon: A Blog website</p>
@@ -146,7 +146,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/shoe-display-website/shoe-display-website.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/shoe-display-website/shoe-display-website-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website</h4>
                   <p>Shoe display website</p>
@@ -158,7 +158,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/shopers-delight-website/shopers-delight-screen1.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/shopers-delight-website/shopers-delight-screen1-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website</h4>
                   <p>SHOPERS DELIGHT: A Ecommerce website</p>
@@ -170,7 +170,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/IBN/IBN-screen1.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/IBN/IBN-screen1-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website</h4>
                   <p>IBN: A NGO website</p>
@@ -183,7 +183,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/myTube/Mytube.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/myTube/Mytube-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>WebApp</h4>
                   <p>Mytube: A Youtube like website</p>
@@ -196,12 +196,37 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/weatherX/weatherx-screen1.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/weatherX/weatherx-screen1-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>WebApp</h4>
                   <p>weatherX: A Weather forecast website</p>
                   <a href="./assets/img/portfolio/weatherX/weatherx-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./portfolio-details/weatherX.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/quizMaster/QuizMaster-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>WebApp</h4>
+                  <p>weatherX: A Weather forecast website</p>
+                  <a href="./assets/img/portfolio/quizMaster/QuizMaster.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/quizMaster.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-designs">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/nenix/design-1-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website Design</h4>
+                  <p>Nenix: A Corporate website Design</p>
+                  <a href="./assets/img/portfolio/nenix/design-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/nenix.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
