--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,8 @@
             <li data-filter=".filter-website">Websites</li>
             <li data-filter=".filter-webapp">WebApps</li>
             <li data-filter=".filter-web-designs">Web Designs</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-Newsletter">Newsletter</li>
+            <li data-filter=".filter-Wordpress-Website">Wordpress Website</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -140,6 +141,30 @@
                   <p>Neon: A Blog website</p>
                   <a href="./assets/img/portfolio/neon-website/neon-screen-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./portfolio-details/neon-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/myTube/Mytube-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>WebApp</h4>
+                  <p>Mytube: A Youtube like website</p>
+                  <a href="./assets/img/portfolio/myTube/Mytube.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/myTube.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/weatherX/weatherx-screen1-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>WebApp</h4>
+                  <p>weatherX: A Weather forecast website</p>
+                  <a href="./assets/img/portfolio/weatherX/weatherx-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/weatherX.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -180,32 +205,17 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-designs">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/myTube/Mytube-removebg-preview.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/nenix/design-1-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>WebApp</h4>
-                  <p>Mytube: A Youtube like website</p>
-                  <a href="./assets/img/portfolio/myTube/Mytube.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio-details/myTube.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Website Design</h4>
+                  <p>Nenix: A Corporate website Design</p>
+                  <a href="./assets/img/portfolio/nenix/design-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/nenix.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
-              <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/weatherX/weatherx-screen1-removebg-preview.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>WebApp</h4>
-                  <p>weatherX: A Weather forecast website</p>
-                  <a href="./assets/img/portfolio/weatherX/weatherx-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio-details/weatherX.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
               <div class="portfolio-content h-100">
@@ -221,17 +231,65 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-designs">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/portfolio/nenix/design-1-removebg-preview.png" class="img-fluid" alt="">
+                <img src="./assets/img/portfolio/nikie/Nike-removebg-preview.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website Design</h4>
-                  <p>Nenix: A Corporate website Design</p>
-                  <a href="./assets/img/portfolio/nenix/design-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="./portfolio-details/nenix.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>Nikie: A Shoe Website Design</p>
+                  <a href="./assets/img/portfolio/nikie/Nike.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/nikie.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-designs">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/hbg/hbg-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website Design</h4>
+                  <p>HBG: A NGO website Design</p>
+                  <a href="./assets/img/portfolio/hbg/hbg-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/hbg.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
             
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web-designs">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/starebs/starebs.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website Design</h4>
+                  <p>STAREBS: A Educational Website Design</p>
+                  <a href="./assets/img/portfolio/starebs/starebs-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/starebs.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Newsletter">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/mailchimp/mailchimp.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Newsletter</h4>
+                  <p>CN: A NGO Newsletter</p>
+                  <a href="./assets/img/portfolio/mailchimp/mailchimp-2.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/mailchimp.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Wordpress-Website">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/wordpress-CN/wordpress-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>WordPress Website</h4>
+                  <p>CN: A NGO Website</p>
+                  <a href="./assets/img/portfolio/wordpress-CN/wordpress-screen1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/cn-wordpress.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
            
 
