new project added

--- a/portfolio.html
+++ b/portfolio.html
@@ -291,6 +291,32 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-webapp">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/chat-webapp/image1-removebg-preview.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>MERN Website</h4>
+                  <p>QuickChat: A one to one chat Website</p>
+                  <a href="./assets/img/portfolio/chat-webapp/image1-removebg-preview.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/chat-webapp.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-website">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/portfolio/it-portfolio-website/image1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>MERN Website</h4>
+                  <p>QuickChat: A one to one chat Website</p>
+                  <a href="./assets/img/portfolio/it-portfolio-website/image1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio-details/it-company-portfolio.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
            
 
           </div><!-- End Portfolio Container -->
