--- a/resume.html
+++ b/resume.html
@@ -118,13 +118,13 @@
             <div class="resume-item pb-0">
               <h4>Bishal Dey</h4>
               <p><em>Aspiring Full Stack Web Developer with a strong foundation in
-                the MERN stack (MongoDB,Express, React, Node.js) and around
-                1 year of experience. Proficient in designing and developing
-                responsive web applications and websites using HTML, CSS, JavaScript, and
-                React, skilled in building and deploying backend systems and
-                APIs. Eager to bring innovative solutions to real- world
-                challenges, with a passion for learning and staying updated with
-                the latest industry trends.</em></p>
+                  the MERN stack (MongoDB,Express, React, Node.js) and around
+                  1 year of experience. Proficient in designing and developing
+                  responsive web applications and websites using HTML, CSS, JavaScript, and
+                  React, skilled in building and deploying backend systems and
+                  APIs. Eager to bring innovative solutions to real- world
+                  challenges, with a passion for learning and staying updated with
+                  the latest industry trends.</em></p>
               <ul>
                 <li>Garia St., Kolkata, IN</li>
                 <li>+91 7439423955</li>
@@ -153,6 +153,20 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Frontend developer</h4>
+              <h5>Jun 2025 - continue</h5>
+              <p><em>Code of Dolphines, Kolkata, IN </em></p>
+              <ul>
+                <li>Development of websites using HTML, CSS, JavaScript,REACT,Bootstrap,Tailwind,Nextjs</li>
+                <li>Design websites and apps using Figma</li>
+                <li>API intrigation on React Project</li>
+                <li>Update existing websites design and functionality using HTML, CSS, JavaScript on FTP</li>
+                <li>Give Demo to client, managing projects</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
+
+            <div class="resume-item">
+              <h4>Frontend developer</h4>
               <h5>Nov 2024 - May 2025</h5>
               <p><em>Brandman Consultancy, Kolkata, IN </em></p>
               <ul>
@@ -170,7 +184,8 @@
               <ul>
                 <li>Bug fixed of an existing website</li>
                 <li>Managed APIs and databases for performance optimization</li>
-                <li>Created new functionality for an existing website like. price calculation, manage product listing etc.</li>
+                <li>Created new functionality for an existing website like. price calculation, manage product listing
+                  etc.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -198,7 +213,7 @@
         <div class="copyright">
           <span>Copyright</span> <strong class="px-1 sitename">#Bishal</strong> <span>All Rights Reserved </span>
         </div>
-        
+
       </div>
     </div>
   </footer>
