--- a/about.html
+++ b/about.html
@@ -113,8 +113,8 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/bishal.png" class="img-fluid" alt="">
+          <div class="col-lg-4" style="height: 300px;">
+            <img src="assets/img/bishal.png" class="img-fluid h-auto" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
