--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4" style="height: 300px;">
-            <img src="assets/img/bishal.png" class="img-fluid h-auto" alt="">
+            <img src="assets/img/bishal1.png" class="img-fluid h-auto" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
