landing page updated

--- a/resume.html
+++ b/resume.html
@@ -152,9 +152,26 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Freelance Frontend Developer</h4>
+              <h5>Jun 2025 – Jan 2026</h5>
+              <p><em><a href="https://www.orbitalwebworks.com/" target="_blank">Orbital WebWorks,</a> Kolkata, India</em></p>
+              <ul>
+                <li>Designed and developed responsive web applications using HTML, CSS, JavaScript, React, and Tailwind
+                  CSS.</li>
+                <li>Integrated RESTful APIs into React applications to deliver dynamic and data-driven user experiences.
+                </li>
+                <li>Enhanced and modernized existing websites by improving UI, performance, and functionality with
+                  React.</li>
+                <li>Collaborated directly with clients to gather requirements, present project demos, and manage
+                  delivery timelines.</li>
+              </ul>
+            </div>
+
+
+            <div class="resume-item">
               <h4>Frontend developer</h4>
-              <h5>Jun 2025 - continue</h5>
-              <p><em>Code of Dolphines, Kolkata, IN </em></p>
+              <h5>Jun 2025 - Dec 2025</h5>
+              <p><em><a href="https://codeofdolphins.com/" target="_blank">Code of Dolphines,</a> Kolkata, IN </em></p>
               <ul>
                 <li>Development of websites using HTML, CSS, JavaScript,REACT,Bootstrap,Tailwind,Nextjs</li>
                 <li>Design websites and apps using Figma</li>
@@ -168,7 +185,7 @@
             <div class="resume-item">
               <h4>Frontend developer</h4>
               <h5>Nov 2024 - May 2025</h5>
-              <p><em>Brandman Consultancy, Kolkata, IN </em></p>
+              <p><em><a href="https://www.brandmanconsultancy.com/" target="_blank">Brandman Consultancy,</a> Kolkata, IN </em></p>
               <ul>
                 <li>Development of websites using HTML, CSS, JavaScript,WIX,Wordpress</li>
                 <li>Design websites using Figma and Photoshop</li>
@@ -180,7 +197,7 @@
             <div class="resume-item">
               <h4>Backend developer Intern</h4>
               <h5>Jun 2024 - Nov 2024</h5>
-              <p><em>Altis Infonet pvt. ltd., Kolkata, IN</em></p>
+              <p><em><a href="https://www.altisinfonet.com/" target="_blank">Altis Infonet pvt. ltd.,</a> Kolkata, IN</em></p>
               <ul>
                 <li>Bug fixed of an existing website</li>
                 <li>Managed APIs and databases for performance optimization</li>
