--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4" style="height: 300px;">
+          <div class="col-lg-4" >
             <img src="assets/img/bishal1.png" class="img-fluid h-auto" alt="">
           </div>
           <div class="col-lg-8 content">
